--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
+    "react-select": "^5.10.1",
+    "react-select-async-paginate": "^0.7.10",
     "styled-components": "^6.1.8",
     "yup": "^1.3.3"
   },
